--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Taxi">
         <activity
+            android:name=".driver_management.TaxiDriver"
+            android:exported="true" />
+        <activity
             android:name=".driver_management.locations"
             android:exported="true" />
         <activity
